# ocr_text_extractor

./: .gitignore  CHANGELOG.md  PROJECT_STRUCTURE.md  README.md  __init__.py  auth.py  cli.py  config.py  logger.py  main.py  ocr_processor.py  pyproject.toml  requirements.txt  text_processor.py
